Changes in version 0.6.0

NEW FEATURES

    o   Added the function plotAnnot.

Changes in version 0.5.0

NEW FEATURES

    o   Added the function fldgmPicoGreen.
