@@ -1,7 +1,9 @@
 exportPattern("^[[:alpha:]]+")
 importFrom(gdata, read.xls)
-importFrom(plyr, ddply, .)
-importFrom(reshape, cast, melt, melt.data.frame)
 importFrom(ggplot2, ggplot, aes 
                   , geom_bar, geom_point, geom_segment
                   , coord_flip, theme)
+importFrom(grid, grid.draw)
+importFrom(plyr, ddply, .)
+importFrom(reshape, cast, melt, melt.data.frame)
+importFrom(VennDiagram, venn.diagram)
