@@ -3,6 +3,7 @@ Changes in version 0.6.0
 NEW FEATURES
 
     o   Added the function plotAnnot.
+    o   Added a convenience function VennAB.
 
 Changes in version 0.5.0
 
